GNOME Bugzilla – Bug 727065
Show a close button instead of cancel button for the info dialog
Last modified: 2014-03-26 01:52:31 UTC
See the patch.
Created attachment 272938 [details] [review] font-view: Show a close button instead of cancel button for the info dialog
Created attachment 272939 [details] [review] : font-view: Add a title to the info dialog
Review of attachment 272938 [details] [review]: Looks good, but I have to release 3.12 and branch off first...
Review of attachment 272939 [details] [review]: Do we really need a title here? I'll check out how it looks before deciding whether to take the patch.
(In reply to comment #3) > Review of attachment 272938 [details] [review]: > > Looks good, but I have to release 3.12 and branch off first... Technical there is only ui-freeze break, so we can to take this for 3.12.1. (In reply to comment #4) > Review of attachment 272939 [details] [review]: > > Do we really need a title here? I'll check out how it looks before deciding > whether to take the patch. I think so. this look strange without title but with only one button at the end. If also after you check this yourself you not sure, we can to ask the designers.
Review of attachment 272938 [details] [review]: Pushed as e9567f301c0fd4daa031e28c9f4ed7217e9cfc0d - font-view: Show a close button instead of cancel button for the info dialog
Review of attachment 272939 [details] [review]: Pushed as d6cc9f9b1b9b1de050f816d91357425b81c389a7 - font-view: Add a title to the info dialog
I am convinced - I pushed your patches to master now after I released 3.12.0 and branched gnome-3-12. I don't think it's worth asking for an UI freeze break for this one, it's pretty minor.
OK, it really minor.