font-view: Show a close button instead of cancel button for the info dialog

https://bugzilla.gnome.org/show_bug.cgi?id=727065